# unitron

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  app.py  cms_fingerprints.yaml  devcontainer.json  docker-compose.yml  fingerprints.yaml  main.py  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt  test-gateway.sh  tox.ini
backend/: main.py  requirements.txt
constraints/: python311-common.txt  python311.txt
docker/: python.Dockerfile
docs/: lifespan-snippet.py  openapi.md
interface/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  requirements.txt  server.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
migrations/: 001_create_discovered_domains.sql
ops/: README.md  entrypoint.sh  smoke-test.sh  validate_import.py
playwright/: insight-happy.spec.ts  package-lock.json  package.json  playwright.config.ts
prisma/: schema.prisma
scripts/: smoke.sh
services/: python.Dockerfile
services/property/: .dockerignore  Dockerfile  README.md  __init__.py  app.py  pyproject.toml  requirements.txt  start.sh
shared/: __init__.py  db.py  db_models.py  models.py
tests/: conftest.py  test_app_service.py  test_browse_runner.py  test_cms_detection.py  test_credibility.py  test_gateway.py  test_gateway_property.py  test_gateway_timeout.py  test_insight.py  test_insight_agent.py  test_insight_retry.py  test_main.py  test_martech.py  test_martech_detect.py  test_martech_detection.py  test_property.py  test_ready.py  (+2 more)
(+147 files in other folders)
