[tool.poetry]
name = "unitron"
version = "0.1.0"

[[tool.poetry.packages]]
include = "services"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.27.0"
python-wappalyzer = "^0.3.1"
beautifulsoup4 = "^4.12.2"
PyYAML = "^6.0"
sqlalchemy = "^2.0.0"
pytest = "^8.2.0"
pytest-asyncio = "^0.23"
openai = "1.30.1"
prometheus-client = "0.22.1"
