[tool.poetry]
name = "property-service"
version = "0.1.0"
description = "Property analyzer microservice"
authors = ["Unitron"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.22.0"
pydantic = "^2.0.0"
starlette = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
